arquivos/registros/.bkp/20240415133428_Sismo_Pipeline.log

########################################################################
 ---------------- Iniciando do Pipeline --------------------------------

 -> Executando ProcessarDadosSismologicos.py...
Traceback (most recent call last):
  File "/home/ggrl/projetos/ClassificadorSismologico/source/Core/ProcessarDadosSismologicos.py", line 22, in <module>
    from BaixarFormaOnda import iterate_events
  File "/home/ggrl/projetos/ClassificadorSismologico/source/Core/BaixarFormaOnda.py", line 21, in <module>
    from utils import MSEED_DIR
  File "/home/ggrl/projetos/ClassificadorSismologico/source/Core/utils.py", line 219
    inventory_df = pd.concat([inventory_df, parse_inventory_txt(PROJETO_DIR + /files/inventario/{file_path})])
                                                                              ^
SyntaxError: invalid syntax

 Criando arquivos de backup...
